[CRD iOS] Host view a11y improvements

* Allow the host view to accept and handle raw gestures when VoiceOver
  is on.
* Add a four-finger-tap gesture to show the menu.
* Add an announcement when the host view is shown to let the user know
  how they could pop up the menu.

Bug: 769882
Change-Id: Ibcdfa81673ccabd43bddebcd320adc727b0ca29f